CrOS: Don't paint tab-loading spinners in layers while in immersive fullscreen.

This regressed in r362878 which didn't handle a case where animations
occur in immersive fullscreen.

To fix, disable layer-painting of tab spinners while in fullscreen.
In most cases the tab is hidden or animating; layers shouldn't
be used. When the tab strip is fully revealed we could use layers,
but the benefit isn't worth the extra logic.

BUG=591535
TEST=On CrOS, enter immersive fullscreen, reload a page, reveal the
tab strip while the page is still loading, then move the mouse down
to dismiss the tab strip. Ensure a frozen throbber doesn't stick
around, floating over the page.

Review URL: https://codereview.chromium.org/1758183002

Cr-Commit-Position: refs/heads/master@{#379140}

Former-commit-id: fde5de1bc63b656dabaafef3e5b59badcc613a22